--- a/application/index/view/section/section_edit.html
+++ b/application/index/view/section/section_edit.html
@@ -16,15 +16,15 @@
         <span style="color: red">*</span>
         <div class="layui-form-mid">高度</div>
         <div class="layui-input-inline" style="width: 100px;">
-          <input type="text" name="height"  lay-verify="required" value="{$sectionRow.height}"  autocomplete="off" class="layui-input">
+          <input type="text" name="height"  lay-verify="required" value="{$data[0]}"  autocomplete="off" class="layui-input">
         </div>
         <div class="layui-form-mid">腿宽</div>
         <div class="layui-input-inline" style="width: 100px;">
-          <input type="text" name="leg_width"  lay-verify="required"value="{$sectionRow.leg_width}"  autocomplete="off" class="layui-input">
+          <input type="text" name="leg_width"  lay-verify="required" value="{$data[1]}"  autocomplete="off" class="layui-input">
         </div>
         <div class="layui-form-mid">腰厚</div>
         <div class="layui-input-inline" style="width: 100px;">
-          <input type="text" name="waist_depth"  lay-verify="required" value="{$sectionRow.waist_depth}"   autocomplete="off" class="layui-input">
+          <input type="text" name="waist_depth"  lay-verify="required" value="{$data[2]}"   autocomplete="off" class="layui-input">
         </div>
       </div>
     </div>
