--- a/application/index/view/employee/employee-info.html
+++ b/application/index/view/employee/employee-info.html
@@ -35,6 +35,7 @@
               <th>身份</th>
               <th>定额权限</th>
               <th>价格权限</th>
+              <th>报价权限</th>
             <th>身份证号码</th>
             <th>银行卡号</th>
             <th>业主</th>
@@ -106,7 +107,16 @@
               {switch name=" $info.is_price"}
               {case value="0"}隐藏{/case}
               {case value="1"}查看{/case}
-              {default /}修改
+              {case value="2"}修改{/case}
+              {default /}
+              {/switch}
+            </td>
+            <td>
+              {switch name=" $info.is_offer"}
+              {case value="0"}隐藏{/case}
+              {case value="1"}查看{/case}
+              {case value="2"}修改{/case}
+              {default /}
               {/switch}
             </td>
             <td>{$info.id_card_no}</td>
