--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -67,8 +67,10 @@
               <th>工艺说明</th>
               <th>工序定额h(小时)</th>
               <th>是否检验</th>
+              {if $Think.session.user.is_offer !=0}
               <th>报价定额h(小时)</th>
               <th>工序报价</th>
+              {/if}
               <th>外协费用</th>
               <th>备注</th>
             </tr>
@@ -101,8 +103,10 @@
                 <span class="layui-badge layui-bg-gray">否</span>
                 {/if}
               </td>
+              {if $Think.session.user.is_offer !=0}
               <td>{$processInfoList.quota_quotation}</td>
               <td>{$processInfoList.process_quoted_price}</td>
+              {/if}
               <td>{$processInfoList.process_real_price}</td>
               <td>{$processInfoList.remark}</td>
             </tr>
