--- a/application/index/view/employee/employee-add.html
+++ b/application/index/view/employee/employee-add.html
@@ -144,6 +144,14 @@
                 <input type="radio" name="is_price" value="2" title="修改"><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>修改</div></div>
             </div>
         </div>
+        <div class="layui-form-item" lay-filter="sex">
+            <label class="layui-form-label">报价权限</label>
+            <div class="layui-input-block">
+                <input type="radio" name="is_offer" value="0" title="隐藏"  checked=""><div class="layui-unselect layui-form-radio layui-form-radioed"><i class="layui-anim layui-icon layui-anim-scaleSpring"></i><div>隐藏</div></div>
+                <input type="radio" name="is_offer" value="1" title="查看" ><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>查看</div></div>
+                <input type="radio" name="is_offer" value="2" title="修改"><div class="layui-unselect layui-form-radio"><i class="layui-anim layui-icon"></i><div>修改</div></div>
+            </div>
+        </div>
         <div class="layui-form-item">
             <label class="layui-form-label">备注</label>
             <div class="layui-input-inline">
