完成报价权限

--- a/application/index/view/blueprint/add-process.html
+++ b/application/index/view/blueprint/add-process.html
@@ -72,7 +72,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">报价定额h(小时)</label>
             <div class="layui-input-inline">
-                <input type="text" id="quota_quotation" disabled  autocomplete="off" value="0" class="layui-input" >
+                <input type="text"  disabled  autocomplete="off" value="0" class="layui-input" >
             </div>
         </div>
         <div class="layui-form-item">
@@ -81,6 +81,7 @@
                 <input type="text" disabled   placeholder="￥"  autocomplete="off" value="0" class="layui-input">
             </div>
         </div>
+        {/case}
         {default /}
         <div class="layui-form-item">
             <label class="layui-form-label">报价定额h(小时)</label>
@@ -94,7 +95,6 @@
                 <input type="text" id="process_quoted_price" name="process_quoted_price"  placeholder="￥"  autocomplete="off" class="layui-input">
             </div>
         </div>
-        {/case}
         {/switch}
         <div class="layui-form-item">
             <label class="layui-form-label">外协费用</label>
