--- a/application/index/view/blueprint/not-files.html
+++ b/application/index/view/blueprint/not-files.html
@@ -21,17 +21,35 @@
 </div>
 ​
 <div class="container bg-white">
-    <form action="javascript:" onsubmit="return false">
+    <form onsubmit="return false">
         <p>选择{$key}文件:</p>
         <div class="custom-file mb-3">
             <input type="file" class="custom-file-input" id="customFile" name="filename">
             <label class="custom-file-label" for="customFile">选择文件</label>
         </div>
         <div class="mt-3">
-            <button type="submit" class="btn btn-primary">提交</button>
+            <button type="button" onclick="UpFiles()" class="btn btn-primary">提交</button>
         </div>
     </form>
 </div>
 </body>
-
+<script>
+    function UpFiles(){
+        var files = $("#customFile")[0].files[0];//获取文件
+        var formFile = new FormData();//文件对象
+        formFile.append('file',files);
+        $.ajax({
+            url:"{:url('index/Blueprint/check',['drawing_id'=>$drawing_id,'tip'=>$tip])}",
+            data:formFile,
+            type: "post",
+            dataType: "json",
+            cache: false,//上传文件无需缓存
+            processData: false,//用于对data参数进行序列化处理 这里必须false
+            contentType: false, //必须
+            success:function (res) {
+                console.log(res);
+            }
+        })
+    }
+</script>
 </html>
