--- a/application/index/view/blueprint/not-files.html
+++ b/application/index/view/blueprint/not-files.html
@@ -28,7 +28,7 @@
             <label class="custom-file-label" for="customFile">选择文件</label>
         </div>
         <div class="mt-3">
-            <button type="button" onclick="UpFiles()" class="btn btn-primary">提交</button>
+            <button type="button" onclick="UpFiles()" class="btn btn-primary">上传</button>
         </div>
     </form>
 </div>
