优化横截模块

--- a/application/index/view/section/section.html
+++ b/application/index/view/section/section.html
@@ -20,10 +20,10 @@
           <table class="layui-table">
             <thead>
             <tr>
-              <th  style="text-align: center">操作</th>
-              <th style="text-align: center">规格</th>
-            <th style="text-align: center">尺寸</th>
-            <th   style="text-align: center">理论重量</th>
+              <th  >操作</th>
+              <th >规格</th>
+            <th>尺寸</th>
+            <th   >截面积</th>
             </tr>
         <tbody>
         {volist name="sectionInfo" id="info"}
@@ -37,9 +37,9 @@
                 <i  style="color:red;" class="layui-icon"></i>
               </a>
             </td>
-            <td style="text-align: center">{$info.spec}</td>
-            <td style="text-align: center">{$info.size}</td>
-            <td style="text-align: center">{$info.weight}</td>
+            <td >{$info.spec}</td>
+            <td >{$info.size}</td>
+            <td >{$info.weight}</td>
           </tr>
         {/volist}
         </tbody>
