--- a/application/index/view/section/section_edit.html
+++ b/application/index/view/section/section_edit.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="layui-form-item">
-      <label for="weight" class="layui-form-label">理论重量</label>
+      <label for="weight" class="layui-form-label">截面积</label>
       <span style="color: red">*</span>
       <div class="layui-input-inline">
         <input type="text" id="weight" name="weight" value="{$sectionRow.weight}"   lay-verify="required"  autocomplete="off" class="layui-input" >
