--- a/application/index/view/blueprint/add-drawing-detial.html
+++ b/application/index/view/blueprint/add-drawing-detial.html
@@ -155,11 +155,6 @@
                 </div>
                 <input type="hidden" class="layui-btn" id="generatingForm">
                 <button type="button" class="layui-btn" id="resettinGeneratingForm">重置</button>
-                <script>
-                    $(function () {
-
-                    });
-                </script>
             </div>
         </div>
         <div id="materialDiv">
@@ -203,13 +198,13 @@
                 </div>
             </div>
             <div class="layui-form-item" id="specifications">
-                <label class="layui-form-label">规格型号</label>
+                <label class="layui-form-label">截面积</label>
                 <div class="layui-input-inline">
                     <select lay-verify="required" lay-search="" name="material_type" lay-filter="channel_select" id="channel_select">
                         <option value="">查找规格</option>
                         <optgroup label="选择规格">
                             {volist name="$section" id="sectionList"}
-                            <option value="{$sectionList.weight}">规格:{$sectionList.spec}&nbsp;&nbsp;尺寸:{$sectionList.size}&nbsp;&nbsp;理论重量:{$sectionList.weight}&nbsp;&nbsp;</option>
+                            <option value="{'weight':'{$sectionList.weight}','spec':'{$sectionList.spec}'}">{$sectionList.spec}      尺寸:{$sectionList.size}      理论重量:{$sectionList.weight}      </option>
                             {/volist}
                         </optgroup>
                     </select>
@@ -227,6 +222,7 @@
                     <input type="text" lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input"  id="sideLength2Input">
                 </div>
             </div>
+            <input type="hidden" id="spec">
             <div class="layui-form-item" id="weight">
                 <label class="layui-form-label">重量</label>
                 <div class="layui-input-inline">
@@ -408,7 +404,7 @@
                 case 3:
                     $("#specifications").show();//规格
                     $("#length").show();//长度
-                    $("#weight").show();//重量
+                    $("#weight").hide();//重量
 
                     $("#altitude").hide();//高度
                     $("#width").hide();//宽度 ->腿宽
@@ -432,37 +428,38 @@
                     break;
                 case 5:
                     $("#length").show();//长度
-                    $("#thickness").show(); //厚度 ->单位重量
-                    $("#thickness > label").text("厚度");
+                    $("#specifications").show();//规格
+                    $("#weight").hide();//重量
 
-                    $("#width").hide();//宽度
-                    $("#altitude").hide();//高度
-                    $("#specifications").hide();//规格
                     $("#sideLength1").hide();//边长1
                     $("#sideLength2").hide();//边长2
+                    $("#thickness").hide(); //厚度
+                    $("#width").hide();//宽度
+                    $("#altitude").hide();//高度
                     materialSelectId = 5;
                     break;
                 case 6:
                     $("#length").show();//长度
-                    $("#sideLength1").show();//边长1
-                    $("#sideLength2").show();//边长2
+                    $("#specifications").show();//规格
+                    $("#weight").hide();//重量
 
+                    $("#sideLength1").hide();//边长1
+                    $("#sideLength2").hide();//边长2
                     $("#thickness").hide(); //厚度
                     $("#width").hide();//宽度
                     $("#altitude").hide();//高度
-                    $("#specifications").hide();//规格
                     materialSelectId = 6;
                     break;
                 case 7:
                     $("#length").show();//长度
-                    $("#sideLength1").show();//边长1
-                    $("#sideLength2").show();//边长2
-                    $("#thickness").show(); //厚度
-                    $("#thickness > label").text("厚度");
+                    $("#specifications").show();//规格
+                    $("#weight").hide();//重量
 
+                    $("#sideLength1").hide();//边长1
+                    $("#sideLength2").hide();//边长2
+                    $("#thickness").hide(); //厚度
                     $("#width").hide();//宽度
                     $("#altitude").hide();//高度
-                    $("#specifications").hide();//规格
                     materialSelectId = 7;
                     break;
 
@@ -479,10 +476,10 @@
             var lengths = $("#lengthInput").val();//长度
             var width = $("#widthInput").val();//宽度
             var altitude = $("#altitudeInput").val();//高度
-            var specifications = $("#specificationsInput").val();//规格
+            var specifications = $("#spec").val();//规格
             var sideLength1 = $("#sideLength1Input").val();//边长1
             var sideLength2 = $("#sideLength2Input").val();//边长2
-            var weight = $("#weight").val();//边长2
+            var weight = $("#weightInput").val();//重量
 
             var memoryThickness = $("#memoryThickness:checked").val();//保证厚度
             memoryThickness = memoryThickness==undefined?"0":"1";
@@ -510,7 +507,6 @@
                 case 3://槽钢
                     materialSelectArray["length_dim"] = lengths;
                     materialSelectArray["weight"] = weight;
-
                     materialSelectArray["specifications"] = specifications;//规格
                     break;
                 case 4://管
@@ -520,26 +516,29 @@
                     layer.msg('保存成功!',{icon:6,time:1000});
                     break;
                 case 5://轨道
-                    materialSelectArray["thickness_Dia"] = thickness;
                     materialSelectArray["length_dim"] = lengths;
+                    materialSelectArray["weight"] = weight;
+                    materialSelectArray["specifications"] = specifications;//规格
+
                     layer.msg('保存成功!',{icon:6,time:1000});
                     break;
                 case 6://角钢
                     materialSelectArray["length_dim"] = lengths;
-                    materialSelectArray["sideLength1"] = sideLength1;
-                    materialSelectArray["sideLength2"] = sideLength2;
+                    materialSelectArray["weight"] = weight;
+                    materialSelectArray["specifications"] = specifications;//规格
+
                     layer.msg('保存成功!',{icon:6,time:1000});
                     break;
                 case 7://矩管
-                    materialSelectArray["thickness_Dia"] = thickness;
                     materialSelectArray["length_dim"] = lengths;
-                    materialSelectArray["sideLength1"] = sideLength1;
-                    materialSelectArray["sideLength2"] = sideLength2;
+                    materialSelectArray["weight"] = weight;
+                    materialSelectArray["specifications"] = specifications;//规格
+
                     layer.msg('保存成功!',{icon:6,time:1000});
                     break;
             }
             //layer.msg('保存成功!',{icon:6,time:1000});
-            //console.log(materialSelectArray);
+            console.log(materialSelectArray);
         });
 
 
@@ -633,10 +632,12 @@
         //监听事件
         form.on('select(channel_select)', function (data) {
             $("#weightInput").val("");
-            var weight = $("#channel_select").val();
-            var lenght = $("#lengthInput").val();
+            var dataJson = $("#channel_select").val();
+            dataJson = dataJson.replace(/'/g,'"');
+            var dataArray = JSON.parse(dataJson);
 
-            $("#weightInput").val(weight);
+            $("#weightInput").val(dataArray['weight']);//给重量编辑框
+            $("#spec").val(dataArray['spec']);//给规格编辑框
         });
 
         form.on('select(materialSelect)', function (data) {
