--- a/application/index/view/blueprint/blueprint-outside.html
+++ b/application/index/view/blueprint/blueprint-outside.html
@@ -1,1 +1,120 @@
-﻿
+﻿{include file="public/header" /}
+<body >
+<div class="x-nav">
+      <span class="layui-breadcrumb">
+        <a href="">首页</a>
+        <a href="">图纸管理</a>
+        <a>
+          <cite>外部图纸</cite>
+        </a>
+      </span>
+    <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
+        <i class="layui-icon" style="line-height:30px">ဂ</i></a>
+</div>
+<div class="x-body">
+    <xblock>
+        <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
+        <button class="layui-btn" onclick="x_admin_show('添加外图','{:url(\'index/blueprint/addDrawingExterna\')}',500,400)"><i class="layui-icon"></i>添加</button>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="layui-input-inline"><input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input"></div>
+        <button class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>
+        <script>
+            $(function () {
+                $("#find").click(function () {
+                    var findText = $("#findText").val();
+                    if(findText.length > 1){
+                        window.location.href="{:url('index/blueprint/blueprintInfo')}";
+                    }else{
+                        layer.msg('请输入查找的关键字!',{icon:0,time:2000});
+                    }
+                });
+            })
+        </script>
+    </xblock>
+    <div class="container-wrap">
+        <div class="box-1">
+            <table class="layui-table">
+                <thead>
+                <tr>
+                    <th>
+                        <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
+                    </th>
+                    <th>操作</th>
+                    <th>外来图号</th>
+                    <th>建档日期</th>
+                    <th>创建人</th>
+                    <th>修改人</th>
+                    <th>备注</th>
+                </tr>
+                </thead>
+                <tbody>
+                {volist name="$blueprintOutside" id="blueprintOutsideList"}
+                <tr>
+                    <td>
+                        <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='{$blueprintOutsideList.id}'><i class="layui-icon">&#xe605;</i></div>
+                    </td>
+                    <td class="td-manage">
+                        <button class="layui-btn layui-btn layui-btn-xs"  onclick="x_admin_show('编辑','#')" ><i class="layui-icon">&#xe642;</i>编辑</button>
+                    </td>
+                    <td>
+                        <a title="序号{$blueprintOutsideList.drawing_external_id}" onclick="x_admin_show('为外图 <span class=\'layui-badge layui-bg-blue\'>{$blueprintOutsideList.drawing_external_id}</span> 添加明细','{:url(\'index/blueprint/addDrawingDetial\', [\'id\' => $blueprintOutsideList.drawing_external_id])}')" href="javascript:;"><i class="layui-icon" style="color: #1E9FFF">{$blueprintOutsideList.drawing_external_id}</i></a>
+                    </td>
+                    <td>{$blueprintOutsideList.create_time}</td>
+                    <td>admin</td>
+                    <td>root</td>
+                    <td>{$blueprintOutsideList.remark}</td>
+                </tr>
+                {/volist}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="page">
+        {$blueprintOutside|raw}
+    </div>
+</div>
+<script>
+    layui.use('laydate', function(){
+        var laydate = layui.laydate;
+        //执行一个laydate实例
+        laydate.render({
+            elem: '#start' //指定元素
+        });
+
+        //执行一个laydate实例
+        laydate.render({
+            elem: '#end' //指定元素
+        });
+    });
+
+    /*用户-删除*/
+    function member_del(obj,id){
+        layer.confirm('确认要删除吗？',function(index){
+            //发异步删除数据
+            $(obj).parents("tr").remove();
+            layer.msg('已删除!',{icon:1,time:1000});
+        });
+    }
+
+    function delAll (argument) {
+        var data = tableCheck.getData();
+        layer.confirm('确认要删除吗？'+data,function(index){
+            //捉到所有被选中的，发异步进行删除
+            $.ajax({
+                url:"/index/index/delall",
+                type:"POST",
+                dataType:"json",
+                data:{
+                    table:"hy_drawing_external",  //表名
+                    data:data   //数据
+                },
+                success:function (res) {
+                    layer.msg(res.message, {icon: 1});
+                    $(".layui-form-checked").not('.header').parents('tr').remove();
+                },
+            });
+        });
+    }
+</script>
+</body>
+</html>
