--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -29,7 +29,7 @@
                     {/if}
 
                     <li>
-                        <a _href="{:url('index/personnel/clientList')}">
+                        <a _href="{:url('index/Client/clientInfo')}">
                         <i class="iconfont">&#xe6a7;</i>
                             <cite>客户列表</cite>
                         </a>
